prd/ubby/ubby-back/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubby-back
  namespace: ubby
  labels:
    app: ubby-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubby-back
  template:
    metadata:
      labels:
        app: ubby-back
        app.kubernetes.io/part-of: soludev-workload
    spec:
      containers:
        - name: ubby-back
          image: kaiohz/pickpro:ubby-back-d49619a51ce4277a36b3f56853bc0f49e6a758d6
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8000
            initialDelaySeconds: 90
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 5
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
      imagePullSecrets:
        - name: ubby-docker-secret
