prd/ubby/ubby-back/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ubby-back-ingress
  namespace: ubby
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: ubby-cors-middleware@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-scheme: https
spec:
  rules:
    - host: ubby-back.soludev.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ubby-back
                port:
                  number: 8000
